--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.52.1"
+    "react-hook-form": "^7.52.1",
+    "swiper": "^11.1.4"
   },
   "devDependencies": {
     "@types/node": "^20",
