--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,16 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": "next/core-web-vitals",
+  "rules": {
+    // "@typescript-eslint/no-unused-vars": "error",
+    // "no-unused-vars": "error",
+    "no-unused-expressions": "error",
+    "prefer-const": "error",
+    "no-console": "warn",
+    "no-undefined": "error"
+    // to enforce using type for object type definitions, can be type or interface
+    // "@typescript-eslint/consistent-type-definitions": [
+    //   "warn",
+    //   { "default": "type" }
+    // ]
+  }
 }
