--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-redux": "^9.1.2",
+    "redux-persist": "^6.0.0",
     "swiper": "^11.1.4"
   },
   "devDependencies": {
