--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.52.1",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
+    "sharp": "^0.33.5",
     "swiper": "^11.1.4"
   },
   "devDependencies": {
