--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.468.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
