--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@next/third-parties": "^15.1.2",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.468.0",
-    "next": "14.2.4",
+    "next": "^15.1.2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
