--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
+    "react-icons": "^5.4.0",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
     "sharp": "^0.33.5",
